--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,11 @@
 #添加数据源
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/test?&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://127.0.0.1:3306/future?&allowPublicKeyRetrieval=true
     username: root
     password: QWE123##
     driver-class-name: com.mysql.cj.jdbc.Driver
+
+
+mybatis-plus:
+  mapper-locations: classpath:mapper/*.xml
